Fix bug in AspectDef s11n/d13n, it was skipping the UUID.